--- a/package.json
+++ b/package.json
@@ -13,15 +13,17 @@
   "license": "ISC",
   "packageManager": "yarn@1.22.19+sha1.4ba7fc5c6e704fce2066ecbfb0b0d8976fe62447",
   "devDependencies": {
-    "@eslint/js": "9.32.0",
+    "@eslint/js": "9.33.0",
     "@rocketseat/eslint-config": "1.2.0",
     "@types/node": "24.2.0",
-    "eslint": "8.34.0",
+    "eslint": "9.33.0",
+    "eslint-plugin-react": "7.37.5",
     "globals": "16.3.0",
+    "jiti": "2.5.1",
     "tsup": "8.5.0",
     "tsx": "4.20.3",
     "typescript": "5.9.2",
-    "typescript-eslint": "8.39.0"
+    "typescript-eslint": "8.39.1"
   },
   "dependencies": {
     "dotenv": "17.2.1",
