Added prisma and initial migration

--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "eslint-plugin-react": "7.37.5",
     "globals": "16.3.0",
     "jiti": "2.5.1",
+    "prisma": "6.13.0",
     "tsup": "8.5.0",
     "tsx": "4.20.3",
     "typescript": "5.9.2",
     "typescript-eslint": "8.39.1"
   },
   "dependencies": {
+    "@prisma/client": "6.13.0",
     "dotenv": "17.2.1",
     "fastify": "5.4.0",
     "zod": "4.0.15"
