--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
   },
   "dependencies": {
     "@prisma/client": "6.13.0",
+    "@types/bcryptjs": "3.0.0",
+    "bcryptjs": "3.0.2",
     "dotenv": "17.2.1",
     "fastify": "5.4.0",
     "zod": "4.0.15"
